# rust_chat_app

./: .gitignore  Cargo.toml  README.md  docker-compose.example.yml  nginx.example.conf  package-lock.json  package.json  setup.sh
server/: .env.example  Cargo.toml  Dockerfile
server/.sqlx/: query-0a61dd088f7990e90ad87034b45299ab87ff263740bfd07dfc79069f76e7b638.json  query-14fdf91cae6b2d462577b2a528e3576e1a1b82d5a3e6aaf6242e3043cff9257f.json  query-17c78db889db5367db88bdd0e7325735ecdd8258ed5b9c2891471ebdff4a6db3.json  query-346e735744b27aa83eb73fe18a940aafb23d7fd199a12138d850863d2dc7fd39.json  query-497ba6ea9f616706f79dc7dcd1d30a1aaacc93b7d916b29fa0e359d73532b941.json  query-4a692bc511917060fe3827bfed45fcfe25bf85c78aa135069b19b9c9cd68f040.json  query-521a20c59730e56f092354687184de5af358295f52e830b78888bc6ce29377de.json  query-678ca3be8d198102508aac82ec9dd891a6a4212e916c9534f89df3836b726516.json  query-6bd4cf7b0b55c5c6dbdd95e5379b75da7a38ae5c05472bff61850a2ad40c7ef8.json  query-78e4ff890af57e473d79fcf10493d4d42f1fedd7eb2d92485438bca7ae5c82e7.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-8446984ded69562f0a98ff6f0229987b8fe43a6019de1bf8c5a41d44060eb597.json  query-8c8e103f0b7dd86d8c47dcde87537fb565348a1e31d6890c4163c9ab5498cc4d.json  query-8eb73df25e5132fba2539d1f4df8b9e6609bad2d1681c6e6ba40a741caaf736e.json  query-b3d0f9605f682fe09b3b4c2fc16a0bb06b5d40e7d886602a20362c2b24e3fcd2.json  query-bca111bf0d7354e34678b81605cda681801360f32b72b977e2fd9d8105f0c3c9.json  (+7 more)
server/migrations/: 20251128160515_init.down.sql  (+1 more)
server/src/: dtos.rs  (+4 more)
(+91 files in other folders)
