[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.7", features = ["ws"] }
axum-extra = { version = "0.12.2", features = ["cookie"] }
axum-server = { version = "0.7.3", features = ["tls-rustls"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures = "0.3.31"
futures-util = "0.3.31"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
regex = "1.12.2"
scrypt = "0.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["cors", "trace"] }
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
